fix the tall CTA button on mobile

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/components/_case-studies.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/components/_case-studies.scss
@@ -141,6 +141,7 @@
 			width: fit-content;
 			padding-left: 16px;
 			padding-right: 16px;
+			height: unset;
 		}
 		@media (min-width: 600px) {
 			align-self: end;
